menu names modified

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
                 </li>
             
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">Tech</a>
+                    <a href="/tech.html" class="navbar__links">About</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="/" class="navbar__links">Products</a>
+                    <a href="/" class="navbar__links">Articles</a>
                 </li>
                 <li class="navbar__btn">
                     <a href="/" class="button">Sign Up</a>
