--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </li>
             
                 <li class="navbar__item">
-                    <a href="/tech.html" class="navbar__links">About</a>
+                    <a href="/about.html" class="navbar__links">About</a>
                 </li>
                 
                 <li class="navbar__item navbar__dropdown">
