updated the pages dropdown

--- a/ConserveNature.html
+++ b/ConserveNature.html
@@ -18,6 +18,14 @@
                 <li class="navbar__item"><a href="/" class="navbar__links">Home</a></li>
                 <li class="navbar__item"><a href="/about.html" class="navbar__links">About</a></li>
                 <li class="navbar__item"><a href="/articles.html" class="navbar__links">Articles</a></li>
+                <li class="navbar__item navbar__dropdown">
+                    <a href="#" class="navbar__links dropdown-toggle">Articles</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/BigBanyanTree.html" class="dropdown-link">Banyan Tree</a></li>
+                        <li><a href="/ConserveNature.html" class="dropdown-link">Artificial to protect Nature</a></li>
+                        <li><a href="/ConserveNature.html" class="dropdown-link">Conserve Nature For our Future</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </nav>
@@ -55,7 +63,7 @@
 
     <!-- Common Footer -->
     <footer class="footer">
-        <p>&copy; 2025 Preslyn's Poetry. All rights reserved.</p>
+        <p> 2025 Preslyn's Poetry. All rights reserved.</p>
     </footer>
 
 </body>
